Inizializzazione  Header/Main

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Floating Cards</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum quaerat a omnis animi architecto neque
+                quos
+                deleniti illum, maiores est vero hic nulla obcaecati! Error soluta consequuntur impedit vero nisi! Lorem
+                ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </header>
+
+        <main>
+            <div class="row">
+                <div class="col">
+                    <img id="image" src="image/male1.png" alt="male1">
+                </div>
+                <div class="col"> <img id="image" src="image/male1.png" alt="male1"></div>
+                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+            </div>
+
+            <div class="row">
+                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+            </div>
+        </main>
+    </div>
+
+
+
+
 </body>
+
 </html>
