--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <div class="col">
                     <img id="image" src="image/male1.png" alt="male1">
                 </div>
-                <div class="col"> <img id="image" src="image/male1.png" alt="male1"></div>
-                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+                <div class="col"> <img id="image" src="image/male2.png" alt="male2"></div>
+                <div class="col"><img id="image" src="image/male3.png" alt="male3"></div>
             </div>
 
             <div class="row">
-                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
-                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
-                <div class="col"><img id="image" src="image/male1.png" alt="male1"></div>
+                <div class="col"><img id="image" src="image/female1.png" alt="female1"></div>
+                <div class="col"><img id="image" src="image/female2.png" alt="female2"></div>
+                <div class="col"><img id="image" src="image/female3.png" alt="female3"></div>
             </div>
         </main>
     </div>
