--- a/index.html
+++ b/index.html
@@ -22,16 +22,56 @@
         <main>
             <div class="row">
                 <div class="col">
-                    <img id="image" src="image/male1.png" alt="male1">
+                        <img id="image" src="image/male1.png" alt="male1">
+                    <div class="text_card">
+                        <div><span>MARCO BIANCHI</span></div>
+                        <div><span>Designer</span></div>
+                        <div><span>marcobianchi@team.com</span></div>
+                    </div>
                 </div>
-                <div class="col"> <img id="image" src="image/male2.png" alt="male2"></div>
-                <div class="col"><img id="image" src="image/male3.png" alt="male3"></div>
+                <div class="col">
+                    <img id="image" src="image/male2.png" alt="male2">
+                    <div class="text_card">
+                        <div><span>GIORGIO VERDI</span></div>
+                        <div><span>Back-end Developer</span></div>
+                        <div><span>giorgioverdi@team.com</span></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <img id="image" src="image/male3.png" alt="male3">
+                    <div class="text_card">
+                        <div><span></span></div>
+                        <div><span>Designer</span></div>
+                        <div><span>marcobianchi@team.com</span></div>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
-                <div class="col"><img id="image" src="image/female1.png" alt="female1"></div>
-                <div class="col"><img id="image" src="image/female2.png" alt="female2"></div>
-                <div class="col"><img id="image" src="image/female3.png" alt="female3"></div>
+                <div class="col">
+                    <img id="image" src="image/female1.png" alt="female1">
+                    <div class="text_card">
+                        <div><span>MARCO BIANCHI</span></div>
+                        <div><span>Designer</span></div>
+                        <div><span>marcobianchi@team.com</span></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <img id="image" src="image/female2.png" alt="female2">
+                    <div class="text_card">
+                        <div><span>MARCO BIANCHI</span></div>
+                        <div><span>Designer</span></div>
+                        <div><span>marcobianchi@team.com</span></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <img id="image" src="image/female3.png" alt="female3">
+                    <div class="text_card">
+                        <div><span>MARCO BIANCHI</span></div>
+                        <div><span>Designer</span></div>
+                        <div><span>marcobianchi@team.com</span></div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
