--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <main>
             <div class="row">
-                <div class="col">
+                <div class="col shadow">
                         <img id="image" src="image/male1.png" alt="male1">
                     <div class="text_card">
                         <div><span>MARCO BIANCHI</span></div>
@@ -29,7 +29,15 @@
                         <div><span>marcobianchi@team.com</span></div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col shadow">
+                    <img id="image" src="image/female1.png" alt="female1">
+                    <div class="text_card">
+                        <div><span>LAURA ROSSI</span></div>
+                        <div><span>Front-end Developer</span></div>
+                        <div><span>laurarossi@team.com</span></div>
+                    </div>
+                </div>
+                <div class="col shadow">
                     <img id="image" src="image/male2.png" alt="male2">
                     <div class="text_card">
                         <div><span>GIORGIO VERDI</span></div>
@@ -37,39 +45,31 @@
                         <div><span>giorgioverdi@team.com</span></div>
                     </div>
                 </div>
-                <div class="col">
-                    <img id="image" src="image/male3.png" alt="male3">
-                    <div class="text_card">
-                        <div><span></span></div>
-                        <div><span>Designer</span></div>
-                        <div><span>marcobianchi@team.com</span></div>
-                    </div>
-                </div>
             </div>
 
             <div class="row">
-                <div class="col">
-                    <img id="image" src="image/female1.png" alt="female1">
-                    <div class="text_card">
-                        <div><span>MARCO BIANCHI</span></div>
-                        <div><span>Designer</span></div>
-                        <div><span>marcobianchi@team.com</span></div>
-                    </div>
-                </div>
-                <div class="col">
+                <div class="col shadow">
                     <img id="image" src="image/female2.png" alt="female2">
                     <div class="text_card">
-                        <div><span>MARCO BIANCHI</span></div>
-                        <div><span>Designer</span></div>
-                        <div><span>marcobianchi@team.com</span></div>
+                        <div><span>MARTA IPSUM</span></div>
+                        <div><span>SEO Specialist</span></div>
+                        <div><span>martaipsum@team.com</span></div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col shadow">
+                    <img id="image" src="image/male3.png" alt="female2">
+                    <div class="text_card">
+                        <div><span>ROBERTO LOREM</span></div>
+                        <div><span>Project Manager</span></div>
+                        <div><span>robertolorem@team.com</span></div>
+                    </div>
+                </div>
+                <div class="col shadow">
                     <img id="image" src="image/female3.png" alt="female3">
                     <div class="text_card">
-                        <div><span>MARCO BIANCHI</span></div>
-                        <div><span>Designer</span></div>
-                        <div><span>marcobianchi@team.com</span></div>
+                        <div><span>DANIELA AMET</span></div>
+                        <div><span>Analyst</span></div>
+                        <div><span>danielaamet@team.com</span></div>
                     </div>
                 </div>
             </div>
