--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col shadow">
-                    <img id="image" src="image/male3.png" alt="female2">
+                    <img id="image" src="image/male3.png" alt="male3">
                     <div class="text_card">
                         <div><span>ROBERTO LOREM</span></div>
                         <div><span>Project Manager</span></div>
